@@ -2,8 +2,10 @@ package Salon.SalonManagementSystem.service;
 
 import Salon.SalonManagementSystem.Dto.CreateUserRequest;
 import Salon.SalonManagementSystem.Dto.UserDto;
+import Salon.SalonManagementSystem.model.Branch;
 import Salon.SalonManagementSystem.model.Role;
 import Salon.SalonManagementSystem.model.Users;
+import Salon.SalonManagementSystem.repository.BranchRepository;
 import Salon.SalonManagementSystem.repository.RoleRepository;
 import Salon.SalonManagementSystem.repository.UsersRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,13 +18,19 @@ import java.util.stream.Collectors;
 @Service
 public class AdminUserService {
     @Autowired private UsersRepository usersRepository;
+    @Autowired private BranchRepository branchRepository;
+
     @Autowired private RoleRepository roleRepository;
     @Autowired private PasswordEncoder passwordEncoder; // define bean in config
 
     // list all users
     public List<UserDto> listAll() {
-        return usersRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return usersRepository.findAll()
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
+
 
     // find single user
     public UserDto findById(Integer id) {
@@ -38,6 +46,12 @@ public class AdminUserService {
         u.setFullName(req.getFullName());
         Role r = roleRepository.findById(req.getRoleId()).orElse(null);
         u.setRole(r);
+
+        // BRANCH - ADD THIS
+        if (req.getBranchId() != null) {
+            Branch branch = branchRepository.findById(req.getBranchId()).orElse(null);
+            u.setBranch(branch);
+        }
         Users saved = usersRepository.save(u);
         return toDto(saved);
     }
@@ -53,6 +67,13 @@ public class AdminUserService {
         }
         Role r = roleRepository.findById(req.getRoleId()).orElse(null);
         u.setRole(r);
+
+        if (req.getBranchId() != null) {
+            Branch branch = branchRepository.findById(req.getBranchId()).orElse(null);
+            u.setBranch(branch);
+        } else {
+            u.setBranch(null); // Clear branch if not selected
+        }
         return toDto(usersRepository.save(u));
     }
 
@@ -64,15 +85,20 @@ public class AdminUserService {
     }
 
     // helper DTO converter
-    private UserDto toDto(Users u) {
-        UserDto d = new UserDto();
-        d.setId(u.getId());
-        d.setUsername(u.getUsername());
-        d.setFullName(u.getFullName());
+    public UserDto toDto(Users u) {
+        UserDto dto = new UserDto();
+        dto.setId(u.getId());
+        dto.setUsername(u.getUsername());
+        dto.setFullName(u.getFullName());
         if (u.getRole() != null) {
-            d.setRoleId(u.getRole().getId());
-            d.setRoleName(u.getRole().getRoleName());
+            dto.setRoleId(u.getRole().getId());
+            dto.setRoleName(u.getRole().getRoleName());
         }
-        return d;
+        if (u.getBranch() != null) {
+            dto.setBranchId(u.getBranch().getId());
+            dto.setBranchName(u.getBranch().getBranchName());
+        }
+        return dto;
     }
+
 }
